fixed nav logo spacing

--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ footer {
 
 /* global nav... */
 .navbar-brand {
-  background: url(/img/logo.png) no-repeat left center;
+  background: url(/img/logo.png) no-repeat center center;
   text-indent: -999em;
   width: 150px;
 }
